Fix - Gutenberg alignment issue on blog page

--- a/style.css
+++ b/style.css
@@ -1611,6 +1611,7 @@ a#scroll-up:hover {
 .no-sidebar .alignfull {
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
+	max-width: unset;
 }
 
 .no-sidebar-full-width .alignwide,
